--- a/app/src/main/res/layout/activity_scan_mode_form.xml
+++ b/app/src/main/res/layout/activity_scan_mode_form.xml
@@ -7,67 +7,74 @@
     android:background="@drawable/bluebackground"
     tools:context=".ScanModeForm">
 
-    <Button
-        android:id="@+id/button17"
-        android:layout_width="209dp"
-        android:layout_height="288dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="146dp"
-        android:background="@drawable/dashboard" />
-
     <ImageView
         android:id="@+id/imageView13"
         android:layout_width="283dp"
         android:layout_height="227dp"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="50dp"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="114dp"
         app:srcCompat="@drawable/bee" />
 
     <Button
-        android:id="@+id/button18"
-        android:layout_width="177dp"
-        android:layout_height="34dp"
+        android:id="@+id/button17"
+        android:layout_width="268dp"
+        android:layout_height="368dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="101dp"
+        android:alpha="0.75"
+        android:background="@drawable/dashboard"
+        android:textSize="30sp" />
+
+    <Button
+        android:id="@+id/byBiteButton"
+        android:layout_width="244dp"
+        android:layout_height="111dp"
         android:layout_alignBottom="@+id/imageView13"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="103dp"
-        android:layout_marginLeft="103dp"
-        android:layout_marginBottom="-13dp"
+        android:layout_marginStart="73dp"
+        android:layout_marginLeft="73dp"
+        android:layout_marginBottom="122dp"
         android:background="@drawable/signinroundbutton"
         android:text="By Bite"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        android:textColor="#ffff" />
+        android:textColor="#ffff"
+        android:textSize="36sp"
+        android:textStyle="bold" />
 
     <Button
-        android:id="@+id/button19"
-        android:layout_width="177dp"
-        android:layout_height="34dp"
-        android:layout_alignStart="@+id/button18"
+        android:id="@+id/byInsectButton"
+        android:layout_width="243dp"
+        android:layout_height="102dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="165dp"
+        android:layout_marginBottom="184dp"
         android:background="@drawable/signinroundbutton"
         android:text="By Insect"
         android:textColor="#ffff"
-        android:textSize="15dp"
-        android:textStyle="bold" />
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:layout_alignLeft="@+id/byBiteButton"
+        android:layout_marginLeft="1dp"
+        android:layout_alignStart="@+id/byBiteButton"
+        android:layout_marginStart="1dp" />
 
     <Button
-        android:id="@+id/button20"
-        android:layout_width="125dp"
-        android:layout_height="38dp"
+        android:id="@+id/backButton"
+        android:layout_width="234dp"
+        android:layout_height="105dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="129dp"
-        android:layout_marginBottom="65dp"
+        android:layout_marginStart="78dp"
+        android:layout_marginBottom="71dp"
         android:background="@drawable/submit"
         android:text="Back"
         android:textColor="#ffff"
-        android:textStyle="bold" />
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="78dp" />
 
     <Button
         android:id="@+id/button23"
@@ -79,6 +86,7 @@
         android:text="Scan Mode"
         android:textSize="25dp"
         android:textColor="#ffff"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
