--- a/app/src/main/res/layout/activity_bite_mark_scan.xml
+++ b/app/src/main/res/layout/activity_bite_mark_scan.xml
@@ -7,4 +7,30 @@
     android:background="@drawable/bluebackground"
     tools:context=".BiteMarkScan">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:orientation="vertical">
+
+        <SurfaceView
+            android:id="@+id/surface_view"
+            android:layout_width="match_parent"
+            android:layout_height="333dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true" />
+
+        <TextView
+            android:id="@+id/ResultTextView"
+            android:layout_width="match_parent"
+            android:layout_height="38dp"
+            android:text="TextView" />
+    </LinearLayout>
+
 </RelativeLayout>
