--- a/app/src/main/res/layout/activity_insect_information.xml
+++ b/app/src/main/res/layout/activity_insect_information.xml
@@ -13,14 +13,16 @@
         android:layout_height="165dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="38dp"
         app:srcCompat="@drawable/honeybee" />
 
     <TextView
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_above="@+id/button33"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="19dp"
         android:text="Bee"
         android:textColor="#000000"
         android:textSize="25dp"
@@ -42,7 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="3dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="360dp"
+        android:layout_marginTop="301dp"
         android:background="#f2f1f1" />
 
     <Button
@@ -61,7 +63,7 @@
         android:layout_width="383dp"
         android:layout_height="3dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="401dp"
         android:background="#f2f1f1" />
 
     <Button
@@ -79,14 +81,16 @@
         android:layout_width="match_parent"
         android:layout_height="3dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="453dp"
+        android:layout_marginTop="354dp"
         android:background="#f2f1f1" />
 
     <ImageView
         android:id="@+id/imageView24"
         android:layout_width="match_parent"
-        android:layout_height="110dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="113dp"
+        android:layout_alignTop="@+id/view3"
+        android:layout_marginTop="-3dp"
+        android:layout_marginBottom="0dp"
         app:srcCompat="@drawable/medicalbackground" />
 
     <Button
@@ -96,9 +100,9 @@
         android:layout_alignTop="@+id/button33"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginTop="-2dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
         android:background="@android:color/transparent"
         android:text=">"
         android:textSize="15dp" />
@@ -110,9 +114,9 @@
         android:layout_alignTop="@+id/view2"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:background="@android:color/transparent"
         android:text=">"
         android:textSize="15dp" />
@@ -122,9 +126,9 @@
         android:layout_width="19dp"
         android:layout_height="32dp"
         android:layout_alignTop="@+id/view3"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="3dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="365dp"
+        android:layout_marginTop="-35dp"
         android:background="@android:color/transparent"
         android:text=">"
         android:textSize="15dp" />
