--- a/app/src/main/res/layout/activity_result_per_insect.xml
+++ b/app/src/main/res/layout/activity_result_per_insect.xml
@@ -19,7 +19,6 @@
             android:id="@+id/button32"
             android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:background="#86e2e9"
             android:text="Result"
@@ -31,10 +30,10 @@
             android:id="@+id/imageView16"
             android:layout_width="145dp"
             android:layout_height="139dp"
-            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="119dp"
-            android:layout_marginTop="59dp"
+            android:layout_marginStart="120dp"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="56dp"
             app:srcCompat="@drawable/honeybee" />
 
         <TextView
@@ -64,11 +63,13 @@
 
         <Button
             android:id="@+id/button39"
-            android:layout_width="133dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
             android:layout_alignStart="@+id/imageView16"
+            android:layout_alignLeft="@+id/imageView16"
             android:layout_alignTop="@+id/button35"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="-6dp"
+            android:layout_marginLeft="-6dp"
             android:layout_marginTop="0dp"
             android:background="#ffc8c8"
             android:text="First Aid Treatment" />
@@ -79,7 +80,9 @@
             android:layout_height="30dp"
             android:layout_alignTop="@+id/button35"
             android:layout_marginStart="-9dp"
+            android:layout_marginLeft="-9dp"
             android:layout_toEndOf="@+id/imageView16"
+            android:layout_toRightOf="@+id/imageView16"
             android:background="#ffc8c8"
             android:text="Pest Control" />
 
@@ -89,7 +92,9 @@
             android:layout_height="113dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
             android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
             android:layout_marginBottom="0dp"
             app:srcCompat="@drawable/medicalbackground" />
 
@@ -98,8 +103,10 @@
             android:layout_width="126dp"
             android:layout_height="40dp"
             android:layout_alignStart="@+id/imageView16"
+            android:layout_alignLeft="@+id/imageView16"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="11dp"
+            android:layout_marginLeft="11dp"
             android:layout_marginBottom="35dp"
             android:background="@drawable/submit"
             android:text="Save"
@@ -127,6 +134,7 @@
             android:layout_height="170dp"
             android:layout_below="@+id/button35"
             android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
             android:layout_marginTop="-281dp"
             android:background="#fff3f3" />
 
@@ -150,6 +158,7 @@
             android:layout_height="170dp"
             android:layout_alignTop="@+id/button52"
             android:layout_toEndOf="@+id/button52"
+            android:layout_toRightOf="@+id/button52"
             android:background="#fff3f3" />
 
         <TextView
@@ -158,8 +167,10 @@
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/textView18"
             android:layout_alignEnd="@+id/textView4"
+            android:layout_alignRight="@+id/textView4"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="-23dp"
+            android:layout_marginRight="-23dp"
             android:text="Wa ko kahibaw"
             android:textColor="#000000" />
 
@@ -169,7 +180,9 @@
             android:layout_height="170dp"
             android:layout_alignTop="@+id/button52"
             android:layout_marginStart="-1dp"
+            android:layout_marginLeft="-1dp"
             android:layout_toEndOf="@+id/button53"
+            android:layout_toRightOf="@+id/button53"
             android:background="#fff3f3" />
 
         <TextView
