--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -23,7 +23,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/Scan" />
+        app:srcCompat="@drawable/scan" />
 
     <ImageButton
         android:id="@+id/imageButton2"
@@ -35,7 +35,7 @@
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/List" />
+        app:srcCompat="@drawable/list" />
 
     <ImageButton
         android:id="@+id/imageButton3"
@@ -50,7 +50,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton"
-        app:srcCompat="@drawable/PestControlServices" />
+        app:srcCompat="@drawable/pestcontrolservices" />
 
     <ImageButton
         android:id="@+id/imageButton4"
@@ -61,7 +61,7 @@
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton2"
-        app:srcCompat="@drawable/Profile" />
+        app:srcCompat="@drawable/profile" />
 
     <ImageButton
         android:id="@+id/imageButton5"
@@ -78,7 +78,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton3"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/About" />
+        app:srcCompat="@drawable/about" />
 
     <ImageButton
         android:id="@+id/imageButton6"
