--- a/app/src/main/res/layout/activity_insect_family_list.xml
+++ b/app/src/main/res/layout/activity_insect_family_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="fill_parent"
     android:fillViewport="true"
     android:background="#FFFFFF">
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,9 +21,13 @@
         android:layout_alignParentTop="true"
         android:background="#86e2e9"
         android:text="Insect Family List"
-        android:textSize="25dp"
         android:textColor="#ffff"
-        android:textStyle="bold"/>
+        android:textSize="25dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/button34"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button34"
@@ -31,65 +35,97 @@
         android:layout_height="61dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
         android:background="#fdf6f6"
         android:text="Ants"
+        android:textColor="#000000"
         android:textSize="15dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button32" />
 
     <View
         android:id="@+id/view2"
         android:layout_width="match_parent"
         android:layout_height="3dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="130dp"
-        android:background="#f2f1f1" />
+        android:background="#f2f1f1"
+        app:layout_constraintBottom_toTopOf="@+id/button36"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button34"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/button36"
         android:layout_width="383dp"
-        android:layout_height="61dp"
+        android:layout_height="59dp"
         android:layout_below="@+id/view2"
         android:background="#fdf6f6"
         android:text="Bees"
+        android:textColor="#000000"
         android:textSize="15dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/view3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button34" />
 
     <View
         android:id="@+id/view3"
         android:layout_width="383dp"
         android:layout_height="3dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="194dp"
-        android:background="#f2f1f1" />
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        android:background="#f2f1f1"
+        app:layout_constraintBottom_toTopOf="@+id/button37"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button37"
         android:layout_width="383dp"
-        android:layout_height="61dp"
+        android:layout_height="60dp"
         android:layout_below="@+id/view3"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
         android:background="#fdf6f6"
         android:text="Wasps"
+        android:textColor="#000000"
         android:textSize="15dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/view4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <View
         android:id="@+id/view4"
         android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_height="4dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="258dp"
-        android:background="#f2f1f1" />
+        android:background="#f2f1f1"
+        app:layout_constraintBottom_toTopOf="@+id/button38"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button38"
         android:layout_width="383dp"
         android:layout_height="61dp"
         android:layout_below="@+id/view4"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
         android:background="#fdf6f6"
         android:text="Moths"
+        android:textColor="#000000"
         android:textSize="15dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/button42"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <View
         android:id="@+id/view5"
@@ -98,29 +134,41 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginBottom="242dp"
-        android:background="#f2f1f1" />
+        android:background="#f2f1f1"
+        app:layout_constraintBottom_toTopOf="@+id/button42"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button42"
         android:layout_width="383dp"
         android:layout_height="61dp"
         android:layout_below="@+id/view5"
-        android:layout_marginTop="-243dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
         android:background="#fdf6f6"
         android:text="Cockroaches"
+        android:textColor="#000000"
         android:textSize="15dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="314dp" />
 
     <View
         android:id="@+id/view6"
         android:layout_width="match_parent"
         android:layout_height="3dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="384dp"
-        android:background="#f2f1f1" />
+        android:layout_marginBottom="124dp"
+        android:background="#f2f1f1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button42"
+        app:layout_constraintVertical_bias="0.0" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
 </ScrollView>
