--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -33,6 +33,7 @@
         android:layout_height="112dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
         android:layout_marginBottom="0dp"
         app:srcCompat="@drawable/medicalbackground" />
 
@@ -126,7 +127,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginBottom="3dp"
         android:background="@android:color/transparent"
         android:text=">" />
 
